<resources>
    <string name="app_name">CubeMarket</string>
    <string name="name_shop">CUBE_SHOP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng Nhập</string>
    <string name="image_product">image product</string>
    <string name="giay_nike">Giày nike</string>
    <string name="gia690_000">đ 690.000</string>
    <string name="favorite">favorite</string>
    <string name="add_cart">add_cart</string>
    <string name="info_product">Giày thể thao nữ ulzzang GẤU TEDDY da mềm nhà UMI SHOES có thể sử dụng như Giày thể thao nữ ulzzang GẤU TEDDY SNEAKER đi học, đi chơi, Giày thể thao nữ ulzzang GẤU TEDDY SNEAKER du lịch dự tiệc, Giày thể thao nữ ulzzang GẤU TEDDY SNEAKER thông dụng sử dụng hàng ngày, Giày thể thao nữ ulzzang GẤU TEDDY SNEAKER chụp ảnh chụp hình pose dáng, Giày thể thao nữ ulzzang BÒ SỮA SNEAKER đi làm văn phòng, Giày thể thao nữ ulzzang GẤU TEDDY SNEAKER ulzzang dạo phố, Giày thể thao nữ ulzzang GẤU TEDDY SNEAKER đi chơi các dịp Tết, ngày lễ Noel, hallowin...</string>
    <string name="logout">Đăng xuất</string>
    <string name="right">right</string>
    <string name="add_directory">Thêm danh mục</string>
    <string name="add_dr">Thêm danh mục</string>
    <string name="update_directory">Cập nhật danh mục</string>
    <string name="pr_saled">Sản phẩm đã đăng</string>
    <string name="add_favorite">add favorite</string>
    <string name="address">Địa chỉ nhận hàng</string>
    <string name="order">Đặt hàng</string>
</resources>