<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_width="145dp"

    android:layout_height="wrap_content">

    <LinearLayout
        android:clickable="true"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        android:paddingVertical="10dp"
        android:focusable="true"
        android:id="@+id/ln_product"
        android:background="@drawable/ripple_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imv_product"
                android:src="@drawable/product1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/image_product" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/giay_nike"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/text_color_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_price"
            android:textSize="15sp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/gia690_000"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/button_background_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="20dp"
                android:elevation="0dp"
                android:translationZ="0dp"
                android:layout_margin="5dp"
                android:layout_width="40dp"
                android:layout_alignParentStart="true"
                android:layout_height="40dp">
                <LinearLayout
                    android:clickable="true"
                    android:background="@drawable/ripple_item_favorite"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/add_favorite"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/favorite" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:elevation="0dp"
                android:layout_margin="5dp"
                android:translationZ="0dp"
                app:cardCornerRadius="20dp"
                android:layout_width="40dp"
                android:layout_alignParentEnd="true"
                android:layout_height="40dp">
                <LinearLayout
                    android:id="@+id/imv_add_cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:background="@drawable/ripple_item_cart">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/add_cart"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/add_cart" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>